Updated .gitignore with the dir changes to {var,.tmp,.cache}

--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,18 @@
-elpa/
-tmp/
-.cache/
-.tmp/
 *#*#*
 **/#*#*
 **/*~
+elpa/
+.cache/
+.tmp/
 auto-save-list/
-history
-bookmarks
-transient/history.el
+transient/
 .org-id-locations
 eln-cache/
 .last-package-update-day
 tutorial/
 *.bak
-projects
 *.elc
-nov-places
 multisession/
-tramp
-.mc-lists.el
 package-quickstart.el
 .custom.el
 var/
@@ -28,6 +21,4 @@ scratch*
 tree-sitter/
 pushmacs
 ido.last
-.emacs-desktop.d/
-places
-persistent-scratch/
+test*
